Fixed z-index of banner.

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   width: 100vw;
   text-align: center;
   margin-bottom: 3rem;
+  z-index: 3;
 }
 
 .project_container {
